# MolSim

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: cmake-single-platform.yml
cmake/modules/: GoogleTestConfig.cmake  doxygen.cmake  googletest.cmake  spdlog.cmake  xercesc.cmake
coolMuc4/: CMakeLists.txt
input/: ballanced-center.txt  ballanced-dance.txt  evading.txt  evading_dance.txt  simulationA2T4.txt
input/Assignment1/: ballanced-center.txt  ballanced-dance.txt  evading_dance.txt
input/Assignment2/: simulationA2T4_3D.txt
input/Assignment3/: falling_drop.xml  two_body.xml  two_body1000.xml  two_body2000.xml  two_body3000.xml  two_body4000.xml  two_body5000.xml  two_body6000.xml  two_body7000.xml  two_body8000.xml
input/Assignment4/: equilibrium.xml  rayleigh-taylor-big.xml  rayleigh-taylor-halo.xml  rayleigh-taylor-hard.xml  rayleigh-taylor-perft-short.xml  rayleigh-taylor-perft.xml  rayleigh-taylor-small.xml  simulationTask3.xml
input/Assignment5/: SlowCooling.xml  SuperCooling.xml  Task1.xml  contest1.xml  contest2.xml  equilibrium.xml  rayleigh-taylor-halo.xml  rayleigh-taylor-perft.xml  rayleigh-taylor-perftslice.xml
libs/libxsd/: input.cxx  input.hxx
res/: input.xml  input.xsd  test.xml  test1.xsd
src/: Environment.cpp  Environment.h  FileReader.cpp  FileReader.h  MolSim.cpp  MolSim.h  Particle.cpp  Particle.h  ParticleContainer.cpp  ParticleContainer.h  ParticleGenerator.cpp  ParticleGenerator.h  Thermostat.cpp  Thermostat.h
src/boundaries/: Boundary.cpp  Boundary.h  BoxContainer.cpp  BoxContainer.h  CellList.cpp  CellList.h  Container.cpp  Container.h  GhostBoundary.cpp  GhostBoundary.h  HaloStepper.cpp  HaloStepper.h  HardBoundary.cpp  HardBoundary.h  HardStepper.cpp  HardStepper.h  InfContainer.cpp  InfContainer.h  InfStepper.cpp  InfStepper.h  NoBoundary.cpp  NoBoundary.h  OutStepper.cpp  OutStepper.h  ParticleContainer.cpp  ParticleContainer.h  PeriodicBoundary.cpp  PeriodicBoundary.h  Stepper.cpp  Stepper.h
src/container/: BoxContainer.cpp  BoxContainer.h  CellList.cpp  CellList.h  DSContainer.cpp  DSContainer.h  InfContainer.cpp  ParticleContainer.cpp  ParticleContainer.h  TypeDesc.cpp  TypeDesc.h  TypePairDesc.cpp  TypePairDesc.h
src/inputReader/: CheckpointReader.cpp  CheckpointReader.h  FileReader.cpp  FileReader.h  Reader.h  XMLParserReader.cpp  XMLParserReader.h  XMLPassReader.cpp  XMLTreeReader.cpp  XMLTreeReader.h  input-pimpl.cpp  input-pimpl.h  input-pskel.cpp  input-pskel.h  input.cpp  input.h
src/outputWriter/: CheckpointWriter.cpp  CheckpointWriter.h  Diffusion.cpp  Diffusion.h  NoWriter.cpp  NoWriter.h  RDF.cpp  RDF.h  VTKWriter.cpp  VTKWriter.h  Writer.h  XYZWriter.cpp  XYZWriter.h  vtk-unstructured.cpp  vtk-unstructured.h
src/physicsCalculator/: Calculator.cpp  Calculator.h  GravityCalculator.cpp  GravityCalculator.h  LJCalculator.cpp  LJCalculator.h  LJSmoothCalculator.cpp  LJSmoothCalculator.h  MolCalculator.cpp  MolCalculator.h  SimpleCalculator.cpp  SimpleCalculator.h  Tweezers.cpp  Tweezers.h
src/solver/: Analytical.cpp  Analytical.h
src/utils/: ArrayUtils.h  MaxwellBoltzmannDistribution.h  Vec.h
tests/: Environment.test.cpp  Environment.test.h  Particle.test.cpp  Particle.test.h  ParticleContainer.test.cpp  ParticleContainer.test.h  ParticleGenerator.test.cpp  ParticleGenerator.test.h  TestMain.cpp  Thermostat.test.cpp  main_test.cpp
tests/boundaries/: BoxContainer.test.cpp  CellList.test.cpp  GhostBoundary.test.cpp  HardBoundary.test.cpp  HardStepper.test.cpp  InfContainer.test.cpp  NoBoundary.test.cpp  ParticleContainer.test.cpp  PeriodicBoundary.test.cpp  Stepper.test.cpp
tests/container/: BoxContainer.test.cpp  CellList.test.cpp  DSContainer.test.cpp  ParticleContainer.test.cpp
tests/inputReader/: XMLTreeReader.cpp  XMLTreeReader.test.cpp
tests/outputWriter/: CheckpointWriter.test.cpp  RDF.test.cpp
tests/physicsCalculator/: GravityCalculator.test.cpp  (+7 more)
(+9 files in other folders)
